<resources>
    <string name="app_name">FlowerPress</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_picture">New Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="flowerpicture">flowerPicture</string>
    <string name="extra_notes_optional">Extra Notes (Optional)</string>
    <string name="name_of_flower">Name of Flower</string>
    <string name="save_flower">Save Flower</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_map">Map</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="save_changes">Save Changes</string>
</resources>
